admin changes for alex

--- a/src/app/admin/admincomplete/admincomplete.component.css
+++ b/src/app/admin/admincomplete/admincomplete.component.css
@@ -8,8 +8,7 @@
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
+    
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
@@ -56,3 +55,7 @@
     min-height: 85vh;
     
   }  
+  ul{
+    list-style-type:none;
+    padding:0;
+  }
