--- a/src/app/admin/adminorder/adminorder.component.html
+++ b/src/app/admin/adminorder/adminorder.component.html
@@ -23,35 +23,37 @@
                <!-- for desktop -->
                    <div class="d-block">
                        <ul class="nav nav-pills nav-fill" role="tablist" id="horizontaltab">
+                            <li class="nav-item">
+                                    <a class="nav-link active " data-toggle="pill" href="#NEW">NEW</a>
+                                </li>
+                                <li class="nav-item">
+                                        <a class="nav-link " data-toggle="pill" href="#SCHEDULED">SCHEDULED</a>
+                                      </li>
                            <li class="nav-item" >
-                             <a class="nav-link active " data-toggle="pill" href="#TODAY">TODAY</a>
+                             <a class="nav-link  " data-toggle="pill" href="#TODAY">TODAY</a>
                            </li>
                           
-                           <li class="nav-item">
-                             <a class="nav-link " data-toggle="pill" href="#SCHEDULED">SCHEDULED</a>
-                           </li>
-                         <li class="nav-item">
-                             <a class="nav-link " data-toggle="pill" href="#NEW">NEW</a>
-                         </li>
+                          
+                         
                          <li class="nav-item">
                              <a class="nav-link " data-toggle="pill" href="#PENDING">PENDING</a>
                          </li>
         
                            <li class="nav-item">
-                             <a class="nav-link " data-toggle="pill" href="#COMPLETE">COMPLETE</a>
+                             <a class="nav-link " data-toggle="pill" href="#COMPLETE">COMPLETED</a>
                            </li>
                           
                          </ul>
                    </div>
                    <div class="tab-content priceres" id="horizontalcontent">
-                        <div id="TODAY" class="container tab-pane active"><br>
-                            <app-admintable></app-admintable>
+                        <div id="NEW" class="container tab-pane "><br>
+                            <app-adminnew></app-adminnew>
                         </div>
                         <div id="SCHEDULED" class="container tab-pane "><br>
                             <app-adminscheduled></app-adminscheduled>
                         </div>
-                        <div id="NEW" class="container tab-pane "><br>
-                            <app-adminnew></app-adminnew>
+                        <div id="TODAY" class="container tab-pane active"><br>
+                            <app-admintable></app-admintable>
                         </div>
                         <div id="PENDING" class="container tab-pane "><br>
                             <app-adminpending></app-adminpending>
