--- a/src/app/admin/adminpending/adminpending.component.html
+++ b/src/app/admin/adminpending/adminpending.component.html
@@ -8,29 +8,44 @@
   
     <table mat-table [dataSource]="dataSource" matSort>
   
-      <!-- No Column -->
-      <ng-container matColumnDef="no">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> No </th>
-        <td mat-cell *matCellDef="let row">  </td>
-      </ng-container>
-  
-      <!-- OrderId Column -->
-      <ng-container matColumnDef="orderid">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Orderid </th>
-        <td mat-cell *matCellDef="let row">  </td>
-      </ng-container>
-  
+     <!-- No Column -->
+    <ng-container matColumnDef="no">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> No </th>
+            <td mat-cell *matCellDef="let orders">{{orders.orderid}} </td>
+          </ng-container>
       
-      <!-- Deliverydate Column -->
-      <ng-container matColumnDef="deliverydate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Deliverydate </th>
-        <td mat-cell *matCellDef="let row">  </td>
-      </ng-container>
+          <!-- Building Column -->
+          <ng-container matColumnDef="building">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Building </th>
+            <td mat-cell *matCellDef="let orders">{{orders.propertytype}}<br>{{orders.squarefeet}}  </td>
+          </ng-container>
+      
+          <!-- Address Column -->
+          <ng-container matColumnDef="address">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+            <td mat-cell *matCellDef="let orders">{{orders.address.street}},{{orders.address.city}},{{orders.address.zip}}  </td>
+          </ng-container>
+      
+          <!-- Date/Time Column -->
+          <ng-container matColumnDef="date/time">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Date/Time </th>
+            <td mat-cell *matCellDef="let orders">{{orders.visitingdate.toDate()| date :'short'}}  </td>
+          </ng-container>
+          <!-- OrderValue-->
+          
+          <ng-container  matColumnDef="ordervalue" >
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Ordervalue </th>
+            <td mat-cell *matCellDef="let order" >{{order.orderprice}}  </td>
+          </ng-container>
+          <ng-container  matColumnDef="status" >
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+                <td mat-cell *matCellDef="let order" >{{order.status}}  </td>
+              </ng-container>
             <!--Edit/delete-->
       <ng-container matColumnDef="edit/delete">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Edit/Delete </th>
-        <td mat-cell *matCellDef="let row">
-          <button class="btn btn-primary btn-sm  my-2 mx-auto"data-toggle="modal" data-target="#pendingModel">  
+        <td mat-cell *matCellDef="let order">
+          <button class="btn btn-primary btn-sm  my-2 mx-auto"data-toggle="modal" data-target="#pendingModel" (click)="query(order.orderid)">  
             <i class="fa fa-edit" aria-hidden="true"></i>
         </button>
         
@@ -63,133 +78,116 @@
                   </div>
                   <div class="col-4">
                       <p class="text-center">
-                          <strong>Ordered by:</strong>{{(property |async)?.orderedby}}
+                          <strong>Ordered by:</strong>{{(property |async)?.orderby}}
                       </p>
                   
                   </div>
                   <div class="col-4">
                        <p class="text-right">
-                          <strong>Phone:</strong>{{(property |async)?.contact}}
+                          <strong>Phone:</strong>1232312312
                       </p>
                   </div>
               </div>
               <form class="p-2">
-                <div class="form-row mt-2">
-                    <div class="col">
-                        <label>Building</label>
-                        <input type="text" class="form-control">
-                    </div>
-                    <div class="col">
-                        <label>SquareFeet</label>
-                        <input type="text" class="form-control">
-                    </div>
-                    <div class="col">
-                        <label>Total</label>
-                        <input type="text" class="form-control" class="form-control">
-                    </div>
-                </div>
-                <div class="form-row mt-2">
-                    <div class="col">
-                        <label>Street</label>
-                        <input type="text" class="form-control">
-                    </div>
-    
-                    <div class="col">
-                        <div class="row">
-                            <div class="col-4">
-                                <label>City</label>
-                                <input type="text" class="form-control"> 
+                    <div class="form-inline">
+                            <div class="form-group space">
+                                    <label for="Building">Building</label>
+                                    <div class="input-group">
+                                        <input type="text" class="space form-control" [ngModel]='(property |async)?.propertytype' name="building">
+                                    </div>
+                            <div class="form-group space">
+                                <label for="SquareFeet">SquareFeet</label>
+                                <input type="text" class="space form-control" [ngModel]='(property |async)?.squarefeet' name="squarefeet">
                             </div>
-                            <div class="col-4">
-                                <label>Zip</label>
-                                <input type="text" class="form-control">
+                          </div>
+                            <div class="form-group space">
+                                <label for="Total">Total</label>
+                                <input type="text" class="space form-control" [ngModel]='(property |async)?.orderprice' name="orderprice">
                             </div>
-                            <div class="col-4">
-                                
-                                <div *ngIf="(property | async)?.unit===undefined; else unitshow">
-    
-                                </div>
-                                <ng-template #unitshow>
-                                    <label>Unit</label>
-                                    <input type="text" class="form-control">
-    
-    </ng-template>
-                                
-                            </div>
+                    </div>
+                    <div class="form-row mt-2">
+                        <div class="col-3">
+                            <label>Street</label>
+                            <input type="text" class="form-control" [ngModel]='(property |async)?.address.street' name="street">
                         </div>
-    
-    
-                    </div>
+                                <div class="col-3">
+                                    <label>City</label>
+                                    <input type="text" class="form-control" [ngModel]='(property |async)?.address.city' name="city"> 
+                                </div>
+                                <div class="col-3">
+                                    <label>Zip</label>
+                                    <input type="text" class="form-control" [ngModel]='(property |async)?.address.zip' name="zip">
+                                </div>
+                                <div class="col-3">
+                                        <label>Unit</label>
+                                        <input type="text" class="form-control" [ngModel]='(property |async)?.address.unit' name="unit">
+        
+                                    
+                                </div>
+                           
+        
+       
                 </div>
                   <div class="form-row mt-2">
-                    <div class="col-6">
+                    <div class="col-4 ml-auto">
                             <label for="orders">Orders:</label>
-                            <textarea class="form-control" rows="4" id="comment" name="text"></textarea>
+                          <ul *ngFor="let prop of (property|async)?.orders; let i = index " class="">
+                            <li><input type="text" class="form-control" [ngModel]='prop' name="prop-{{i}}">
+                            </li>
+                        </ul>
+                        </div>
+                        <div class="col-2 float-right mr-auto">
+                        <label for="ordersprice">Price</label><p class="float-right">Progress:{{allPercentage | async}}</p>
+                        <ul *ngFor="let propy of (property|async)?.orders; let i = index " #elem [attr.id]="(property|async)?.orderid" class="form-inline mb-2">
+                             <li><input type="file" class="btn btn-default" multiple=true (change)="multipleimageupload(propy,$event,elem.id)" name="propy-{{i}}"></li>
                          
-                    </div>
-                    <div class="col-6">
-                            <label for="addons">Addons:</label>
-                            <textarea class="form-control" rows="4" id="comment" name="text"></textarea>
+                        </ul>
                          
                     </div>
                  </div>   
     
                       
-                  <div class="form-row mt-2">
-                      <div class="col">
-                          <label>Visiting Date </label>
-                          <div *ngIf ="(property | async)?.visitingdate!==undefined;">
-                              <input type="date" class="form-control">
-                          </div>
-                          
-                          
-                      </div>
-                      <div class="col">
-                          <label>Visiting Time</label>
-                          <input type="text" class="form-control">
-                         
-                      </div>
-                      <div class="col">
-                          <label>Meeting Type</label>
-                          <input type="text" class="form-control">
-                      </div>
-                      <div class="col">
-                          <label>Code</label>
-                          <input type="text" class="form-control">
-                      </div>
-                  </div>
-                  <div class="form-row mt-2">
-                      <div class="col-4">
-                          <label>Comments</label>
-                          <input type="text" class="form-control">
-                      </div>
-    
-    <div class="col-4 col-md-4">
-                          <label>Assign Agent</label>
-                          <select class="custom-select" #input>
-                              <option selected>Choose...</option>
-                              <option value="1">One</option>
-                              <option value="2">Two</option>
-                              <option value="3">Three</option>
-                          </select>
-                          </div>
-                          <div class="col-4">
-                          <form>
-                              <div class="form-group">
-                                  <label for="exampleFormControlFile1">Example file input</label>
-                                  <input type="file" class="form-control-file" id="exampleFormControlFile1">
-                              </div>
-                          </form>
-                          </div>
-                          </div>
-                          <div class="form-row mt-2">
-                            <div class="col">
-                                <button class="btn btn-primary" type="submit">Save</button>
-                                <button class="btn btn-danger mx-3">Delete</button>
-                          </div>
-                          </div>
-                    
-                          </form>
+                 <div class="form-row mt-2">
+                        <div class="col">
+                            <label>Visiting Date </label>
+                            <div *ngIf ="(property | async)?.visitingdate!==undefined;">
+                                <input type="text" class="form-control" [ngModel]='(property |async)?.visitingdate.toDate()|date' name="visitingdate" >
+                            </div>
+                            
+                            
+                        </div>
+                        <div class="col">
+                            <label>Visiting Time</label>
+                            <input type="text" class="form-control" [ngModel]='(property |async)?.visitingdate.toDate()| date:"shortTime" ' name="visitingtime">
+                           
+                        </div>
+                        <div class="col">
+                            <label>Meeting Type</label>
+                            <input type="text" class="form-control" [ngModel]='(property |async)?.meetingtype' name="meetingtype">
+                        </div>
+                        <div class="col">
+                            <label>Code</label>
+                            <input type="text" class="form-control" [ngModel]='(property |async)?.accesscode' name="accesscode" >
+                        </div>
+                    </div>
+                    <div class="form-row mt-2">
+                        <div class="col-8">
+                            <label>Comments</label>
+                            <input type="text" class="form-control" [ngModel]='(property |async)?.comments' name="comments" >
+                        
+                        </div>
+      
+      
+          
+                            </div>
+                            <div class="form-row mt-2">
+                              <div class="col">
+                                  <button class="btn btn-primary" type="submit">Confirm</button>
+                                  <button class="btn btn-danger mx-3">Delete</button>
+                            </div>
+                            </div>
+                      
+                            </form>
                           </div>
                           </div>
                           </div>
