--- a/src/app/admin/adminsidenav/adminsidenav.component.html
+++ b/src/app/admin/adminsidenav/adminsidenav.component.html
@@ -11,7 +11,7 @@
            
             <a class="nav-link" routerLink="/aduser" >
               <i class="fa fa-user text-white"></i>
-            <span class="nav-link-text text-white">Users</span>
+            <span class="nav-link-text text-white">Customers</span>
           </a>
         </li>
        
@@ -21,12 +21,7 @@
             <span class="nav-link-text text-white">Orders</span>
           </a>
         </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Orders">
-          <a class="nav-link" routerLink="/adorderhistory">
-            <i class="fa fa-first-order text-white"></i>
-            <span class="nav-link-text text-white">Orders History</span>
-          </a>
-        </li>
+  
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Payment">
           <a class="nav-link text-white" routerLink="/adpayment">
               <i class="fa fa-shopping-cart text-white"></i>
