--- a/src/app/admin/admincomplete/admincomplete.component.html
+++ b/src/app/admin/admincomplete/admincomplete.component.html
@@ -1,217 +1,268 @@
-<h3 class="text-center">COMPLETE</h3>
+
+<h3 class="text-center">COMPLETED</h3>
 <div class="example-container mat-elevation-z8">
-    <div class="example-header">
-      <mat-form-field>
-        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-      </mat-form-field>
-    </div>
-  
-    <table mat-table [dataSource]="dataSource" matSort>
-  
-      <!-- No Column -->
-      <ng-container matColumnDef="no">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> No </th>
-        <td mat-cell *matCellDef="let row">  </td>
-      </ng-container>
-  
-      <!-- Building Column -->
-      <ng-container matColumnDef="building">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Building </th>
-        <td mat-cell *matCellDef="let row">  </td>
-      </ng-container>
-  
-      <!-- Address Column -->
-      <ng-container matColumnDef="address">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-        <td mat-cell *matCellDef="let row">  </td>
-      </ng-container>
-  
-      <!-- Date/Time Column -->
-      <ng-container matColumnDef="date/time">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Date/Time </th>
-        <td mat-cell *matCellDef="let row">  </td>
-      </ng-container>
-      <!-- OrderValue-->
-      <ng-container matColumnDef="ordervalue">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Ordervalue </th>
-        <td mat-cell *matCellDef="let row" >  </td>
-      </ng-container>
-      <!--Edit/delete-->
-      <ng-container matColumnDef="edit/delete">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Edit/Delete </th>
-        <td mat-cell *matCellDef="let row">
-          <button class="btn btn-primary btn-sm  my-2 mx-auto"data-toggle="modal" data-target="#completeModel">  
-            <i class="fa fa-edit" aria-hidden="true"></i>
-        </button>
-        
-        <br>
-        <button class="btn btn-danger btn-sm my-2 mx-auto"
-         data-toggle="modal" data-target="#completeModel">
-            <i class="fa fa-trash" aria-hidden="true"></i>
-        </button> 
+  <div class="example-header">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+  </div>
+
+  <table mat-table [dataSource]="dataSource" matSort>
+
+    <!-- No Column -->
+    <ng-container matColumnDef="no">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> No </th>
+      <td mat-cell *matCellDef="let orders">{{orders.orderid}} </td>
+    </ng-container>
+
+    <!-- Building Column -->
+    <ng-container matColumnDef="building">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Building </th>
+      <td mat-cell *matCellDef="let orders">{{orders.propertytype}}<br>{{orders.squarefeet}}  </td>
+    </ng-container>
+
+    <!-- Address Column -->
+    <ng-container matColumnDef="address">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+      <td mat-cell *matCellDef="let orders">{{orders.address.street}},{{orders.address.city}},{{orders.address.zip}}  </td>
+    </ng-container>
+
+    <!-- Date/Time Column -->
+    <ng-container matColumnDef="date/time">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Date/Time </th>
+      <td mat-cell *matCellDef="let orders">{{orders.visitingdate.toDate()| date :'short'}}  </td>
+    </ng-container>
+    <!-- OrderValue-->
     
-        </td>
-        
-      </ng-container>
-  
-  
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-      </tr>
-    </table>
-    <!--model box-->
-  <div id="completeModel" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
-          <div class="modal-content">
-              <div class="row p-2">
-                  <div class="col-4">
-                      <p>
-                          <strong>Order ID:</strong> {{(property |async)?.orderid}} 
-                         
-                            
-                      </p>
-                  </div>
-                  <div class="col-4">
-                      <p class="text-center">
-                          <strong>Ordered by:</strong>{{(property |async)?.orderedby}}
-                      </p>
-                  
-                  </div>
-                  <div class="col-4">
-                       <p class="text-right">
-                          <strong>Phone:</strong>{{(property |async)?.contact}}
-                      </p>
-                  </div>
+    <ng-container  matColumnDef="ordervalue" >
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Ordervalue </th>
+      <td mat-cell *matCellDef="let order" >{{order.orderprice}}  </td>
+    </ng-container>
+    <!--Edit/delete-->
+    <ng-container matColumnDef="edit/delete">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Edit/Delete </th>
+      <td mat-cell *matCellDef="let order">
+        <button class="btn btn-primary btn-sm  my-2 mx-auto"data-toggle="modal" data-target="#complete" (click)="query(order.orderid)">  
+          <i class="fa fa-edit" aria-hidden="true"></i>
+      </button>
+      
+      <br>
+      <button class="btn btn-danger btn-sm my-2 mx-auto"
+       data-toggle="modal" data-target="#tablepModel">
+          <i class="fa fa-trash" aria-hidden="true"></i>
+      </button> 
+      </td>
+      
+    </ng-container>
+
+
+<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+    </tr>
+  </table>
+  <!--model box-->
+  <div id="complete" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+          <div class="row p-2">
+              <div class="col-4">
+                  <p>
+                      <strong>Order ID:</strong> {{(property |async)?.orderid}} 
+                     
+                        
+                  </p>
               </div>
-              <form class="p-2">
-                <div class="form-row mt-2">
-                    <div class="col">
-                        <label>Building</label>
-                        <input type="text" class="form-control">
-                    </div>
-                    <div class="col">
-                        <label>SquareFeet</label>
-                        <input type="text" class="form-control">
-                    </div>
-                    <div class="col">
-                        <label>Total</label>
-                        <input type="text" class="form-control" class="form-control">
-                    </div>
-                </div>
-                <div class="form-row mt-2">
-                    <div class="col">
-                        <label>Street</label>
-                        <input type="text" class="form-control">
-                    </div>
-    
-                    <div class="col">
-                        <div class="row">
-                            <div class="col-4">
-                                <label>City</label>
-                                <input type="text" class="form-control"> 
-                            </div>
-                            <div class="col-4">
-                                <label>Zip</label>
-                                <input type="text" class="form-control">
-                            </div>
-                            <div class="col-4">
-                                
-                                <div *ngIf="(property | async)?.unit===undefined; else unitshow">
-    
-                                </div>
-                                <ng-template #unitshow>
-                                    <label>Unit</label>
-                                    <input type="text" class="form-control">
-    
-    </ng-template>
-                                
-                            </div>
+              <div class="col-4">
+                  <p class="text-center">
+                      <strong>Ordered by:</strong>{{(property |async)?.orderby}} 
+                  </p>
+              
+              </div>
+              <div class="col-4">
+                   <p class="text-right">
+                      <strong>Phone:</strong>123354346
+                  </p>
+              </div>
+          </div>
+          <form class="p-2" (ngSubmit)="scheduleorder(orderform.value)" #orderform="ngForm">
+            <div class="form-inline">
+                    <div class="col-4">
+                            <p>
+                                <strong>Building:</strong> {{(property |async)?.propertytype}}
+                               
+                                  
+                            </p>
                         </div>
-    
-    
-                    </div>
-                </div>
-                  <div class="form-row mt-2">
-                    <div class="col-6">
-                            <label for="orders">Orders:</label>
-                            <textarea class="form-control" rows="4" id="comment" name="text"></textarea>
-                         
-                    </div>
-                    <div class="col-6">
-                            <label for="addons">Addons:</label>
-                            <textarea class="form-control" rows="4" id="comment" name="text"></textarea>
-                         
-                    </div>
-                 </div>   
-    
-                      
-                  <div class="form-row mt-2">
-                      <div class="col">
-                          <label>Visiting Date </label>
-                          <div *ngIf ="(property | async)?.visitingdate!==undefined;">
-                              <input type="date" class="form-control">
-                          </div>
-                          
-                          
-                      </div>
-                      <div class="col">
-                          <label>Visiting Time</label>
-                          <input type="text" class="form-control">
-                         
-                      </div>
-                      <div class="col">
-                          <label>Meeting Type</label>
-                          <input type="text" class="form-control">
-                      </div>
-                      <div class="col">
-                          <label>Code</label>
-                          <input type="text" class="form-control">
-                      </div>
-                  </div>
-                  <div class="form-row mt-2">
-                      <div class="col-4">
-                          <label>Comments</label>
-                          <input type="text" class="form-control">
-                      </div>
-    
-    <div class="col-4 col-md-4">
-                          <label>Assign Agent</label>
-                          <select class="custom-select" #input>
-                              <option selected>Choose...</option>
-                              <option value="1">One</option>
-                              <option value="2">Two</option>
-                              <option value="3">Three</option>
-                          </select>
-                          </div>
-                          <div class="col-4">
-                          <form>
-                              <div class="form-group">
-                                  <label for="exampleFormControlFile1">Example file input</label>
-                                  <input type="file" class="form-control-file" id="exampleFormControlFile1">
-                              </div>
-                          </form>
-                          </div>
-                          </div>
-                          <div class="form-row mt-2">
-                            <div class="col">
-                                <button class="btn btn-primary" type="submit">Save</button>
-                                <button class="btn btn-danger mx-3">Delete</button>
-                          </div>
-                          </div>
+                        <div class="col-4">
+                                <p>
+                                    <strong>SquareFeet:</strong> {{(property |async)?.squarefeet}}
+                                   
+                                      
+                                </p>
+                            </div>
+                            
+                            <div class="col-4">
+                                    <p>
+                                        <strong>Total:</strong> {{(property |async)?.orderprice}}
+                                       
+                                          
+                                    </p>
+                                </div>
+            
                     
-                          </form>
-                          </div>
-                          </div>
-                          </div>
-                          
-                          
-                           
+            </div>
+            <div class="form-row mt-2">
+                
+                    <div class="col-3">
+                            <p>
+                                <strong>Street:</strong> {{(property |async)?.address.street}}
+                               
+                                  
+                            </p>
+                        </div>
+                        <div class="col-3">
+                                <p>
+                                    <strong>City:</strong> {{(property |async)?.address.city}}
+                                   
+                                      
+                                </p>
+                            </div>
+                            <div class="col-3">
+                                    <p>
+                                        <strong>Zip:</strong> {{(property |async)?.address.zip}}
+                                       
+                                          
+                                    </p>
+                                </div>
+                                <div class="col-3">
+                                        <p>
+                                            <strong>Unit:</strong> {{(property |async)?.address.unit}}
+                                           
+                                              
+                                        </p>
+                                    </div>
+
+            
+                
+                    </div>
+
+              <div class="form-row mt-2">
+                    <div class="col-4">
+                            <strong>Orders:</strong>
+                                    <ul>
+                                       <li>{{(property |async)?.orders[0]}}</li>  
+                                       <li>{{(property |async)?.orders[1]}}</li>  
+                                       <li>{{(property |async)?.orders[2]}}</li>  
+                                    </ul>
+    
+                        </div>
+                        <div class="col-2 float-right">
+                                <strong>OrderPrice:</strong>
+                                        <ul>
+                                           <li>{{(property |async)?.ordersprice[0]}}</li>  
+                                           <li>{{(property |async)?.ordersprice[1]}}</li>  
+                                           <li>{{(property |async)?.ordersprice[2]}}</li>  
+                                        </ul>
+        
+                            </div>
+                       
+                <div class="col-4">
+                        <strong>PhotographyAddons:</strong>
+                        <ul>
+                           <li>{{(property |async)?.Photographyaddons[0]}}</li>  
+                           <li>{{(property |async)?.Photographyaddons[1]}}</li> 
+                        </ul>
+                        <strong>VideoAddons:</strong>
+                        <ul>
+                           <li>{{(property |async)?.Videoaddons[0]}}</li>  
+                           <li>{{(property |async)?.Videoaddons[1]}}</li> 
+                        </ul>
+                
+                </div>
+
+                <div class="col-2 float-right">
+                        <strong>Price:</strong>
+                        <ul>
+                           <li>{{(property |async)?.Photographyaddonsprice[0]}}</li>  
+                           <li>{{(property |async)?.Photographyaddonsprice[1]}}</li> 
+                        </ul>
+                        <strong>Price:</strong>
+                        <ul>
+                           <li>{{(property |async)?.VideoaddonsPrice[0]}}</li>  
+                           <li>{{(property |async)?.VideoaddonsPrice[1]}}</li> 
+                        </ul>
+                
+
+            </div>
+             </div>   
+
+                  
+              <div class="form-row mt-2">
+                  <div class="col-6">
+                        <p>
+                                <strong>Visiting Date:</strong> {{(property |async)?.visitingdate.toDate()|date}}
+                               
+                                  
+                            </p>
+
+                      
+                      
+                  </div>
+                  <div class="col-6">
+                        <p>
+                                <strong>Visiting Time:</strong> {{(property |async)?.visitingdate.toDate()| date:"shortTime"}}
+                               
+                                  
+                            </p>
+                      
+                  </div>
+                </div>
+                <div class="form-row mt-2">
+                  <div class="col-6">
+                        <p>
+                                <strong>Meeting Type:</strong> {{(property |async)?.meetingtype}}
+                               
+                                  
+                            </p>
+                      
+                      </div>
+                  <div class="col-6">
+                        <p>
+                                <strong>Code:</strong> {{(property |async)?.accesscode}}
+                               
+                                  
+                            </p>
+                       </div>
+              </div>
+              <div class="form-row mt-2">
+                  <div class="col-8">
+                        <p>
+                                <strong>Comments:</strong> {{(property |async)?.comments}}
+                               
+                                  
+                            </p>
+                      
+                  </div>
+
+
+    
+                      </div>
+                      <div class="form-row mt-2">
+                        <div class="col">
+                            <button class="btn btn-primary" type="submit">Confirm</button>
+                            <button class="btn btn-danger mx-3">Delete</button>
+                      </div>
+                      </div>
+                
+                      </form>
+                      </div>
+                      </div>
+                      </div>
                       
                       
                        
                   
 
   
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-  </div>      
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
