--- a/src/app/admin/adminnew/adminnew.component.css
+++ b/src/app/admin/adminnew/adminnew.component.css
@@ -8,8 +8,6 @@
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
@@ -56,3 +54,11 @@
     min-height: 85vh;
     
   }  
+  ul{
+    list-style-type:none;
+    padding:0;
+  }
+  .space{
+    margin-left: .30rem;
+
+  }
