--- a/src/app/admin/adminnew/adminnew.component.html
+++ b/src/app/admin/adminnew/adminnew.component.html
@@ -209,12 +209,12 @@
           
               
                                 </div>
-                                <div class="form-row mt-2">
-                                  <div class="col">
-                                      <button class="btn btn-primary" type="submit">Confirm</button>
-                                      <button class="btn btn-danger mx-3">Delete</button>
-                                </div>
-                                </div>
+                                <div class="form-row mt-2" #elem [attr.id]="(property|async)?.orderid">
+                                    <div class="col"  >
+                                        <button class="btn btn-primary" type="submit"  (click)="update(elem.id)" >Confirm</button>
+                                        <button class="btn btn-danger mx-3" (click)="delete(elem.id)">Delete</button>
+                                  </div>
+                                  </div>
                           
                                 </form>
                                 </div>
