--- a/src/app/admin/adminorder/adminorder.component.html
+++ b/src/app/admin/adminorder/adminorder.component.html
@@ -23,8 +23,8 @@
                <!-- for desktop -->
                    <div class="d-block">
                        <ul class="nav nav-pills nav-fill" role="tablist" id="horizontaltab">
-                            <li class="nav-item">
-                                    <a class="nav-link active " data-toggle="pill" href="#NEW">NEW</a>
+                            <li class="nav-item ">
+                                    <a class="nav-link active  " data-toggle="pill" href="#NEW">NEW</a>
                                 </li>
                                 <li class="nav-item">
                                         <a class="nav-link " data-toggle="pill" href="#SCHEDULED">SCHEDULED</a>
@@ -46,13 +46,13 @@
                          </ul>
                    </div>
                    <div class="tab-content priceres" id="horizontalcontent">
-                        <div id="NEW" class="container tab-pane "><br>
+                        <div id="NEW" class="container tab-pane active"><br>
                             <app-adminnew></app-adminnew>
                         </div>
                         <div id="SCHEDULED" class="container tab-pane "><br>
                             <app-adminscheduled></app-adminscheduled>
                         </div>
-                        <div id="TODAY" class="container tab-pane active"><br>
+                        <div id="TODAY" class="container tab-pane "><br>
                             <app-admintable></app-admintable>
                         </div>
                         <div id="PENDING" class="container tab-pane "><br>
