--- a/src/app/client/profile/profile.component.html
+++ b/src/app/client/profile/profile.component.html
@@ -11,11 +11,11 @@
   <div class="col-md-12">
     <p>{{auth.email}}</p>
     <hr>
-    <p>{{auth.profile.displayName}} fgfggh</p>
+    <p>{{auth.profile.displayName}}</p>
     <hr>
-    <p> {{auth.displayName}}</p>
+    <p> {{auth.profile.phonenumber}}</p>
     <hr>
-    <p> {{auth.brokerage}}</p>
+    <p> {{auth.profile.brokerage}}</p>
 
 
 
