--- a/src/app/client/editprofile/editprofile.component.html
+++ b/src/app/client/editprofile/editprofile.component.html
@@ -1,44 +1,19 @@
 <app-navbar></app-navbar>
 <div class="row text-center">
-  <div class="col-md-6 col-6 mx-auto">
-  
-    <img [src]="url |async" alt="no" class="img-thumbnail">
-   <!-- <input type="file" (change)="upload($event)" accept=".png,.jpg"/> -->
-<<<<<<< HEAD
-   
-=======
- 
->>>>>>> d17d55676377d76ccc2e85739f044b31aefb1819
+  <div class="col-md-6 col-6 mx-auto" >
+ <img [src]="(profile | async)?.url" class="img-fluid" />
+       
 <div class="image-upload">
     <label for="file-input">
        <i class="fa fa-edit custom-edit"></i>
     </label>
   
-    <input id="file-input" type="file" (change)="upload($event)"  name="file-input" accept=".png,.jpg">
+    <input id="file-input" type="file" single=true (change)="upload($event)"  name="file-input" accept=".png,.jpg">
     
   
 </div>
 <p>LINDA GREEN</p><hr>    
     </div>
-<<<<<<< HEAD
-    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
-           <div class="form-group">
-           <div class="row">    
-            <label for="example-text-input">Name</label>
-                  
-                          <label for="example-text-input" >Linda Green</label>
-                
-                <hr>
-               
-                  <label for="example-search-input" >Email</label>
-                  
-                          <label for="example-text-input" >yourname@domain.com </label>
-                  
-                <hr>
-                
-                  <label for="example-email-input" >Brokerage</label>
-                  
-=======
     <div class="col-md-12"> 
           <div class="form-group row">
                   <label for="example-text-input" class="col-5 col-form-label">Name</label>
@@ -49,24 +24,27 @@
                 <div class="form-group row">
                   <label for="example-search-input" class="col-5 col-form-label">Email</label>
                   <div class="col-7">
-                          <label for="example-text-input" >{{auth.email}} </label>
+                          <label for="example-text-input" >{{(profile | async)?.email}} </label>
                   </div>
-                </div><hr>
+                </div>
+                <hr>
                 <div class="form-group row">
                   <label for="example-email-input" class="col-5 col-form-label">Brokerage</label>
                   <div class="col-7">
->>>>>>> d17d55676377d76ccc2e85739f044b31aefb1819
-                          <label for="example-text-input" >Your Real Estate Company</label>
-                 
+                          <label for="example-text-input" >{{(profile | async)?.brokerage}}</label>
+                 </div>
+                 </div>
                 <hr>
                 
-                  <label for="example-url-input" >My phone number:</label>
-                  
-                          <label for="example-text-input" >(-) --- - -- </label>
-                  
+                <div class="form-group row">
+                    <label for="example-search-input" class="col-5 col-form-label">Phone number</label>
+                    <div class="col-7">
+                            <label for="example-text-input" >{{(profile | async)?.phonenumber}} </label>
+                    </div>
+                  </div>
                 <hr>
                
-                      <label    >Payment Info: <span>Not set up yet</span></label>
+                      <label>Payment Info: <span>Not set up yet</span></label>
                       
                              <button type="button" class="btn btn1">Set Up</button>
                      
