--- a/src/app/client/invoice/invoice.component.html
+++ b/src/app/client/invoice/invoice.component.html
@@ -19,7 +19,7 @@
         <div class="row mt-5">
                <div class="col-md-4 col-4 tr">
                        <img src="assets/image/icons/invoice.jpg" class="tr"> 
-                       <p class="text-center my-3">Oct 9</p>
+                       <p class="text-center my-3">oct 21</p>
                </div>
                <div class="col-md-4 col-4 ">
                        <img src="assets/image/icons/invoice.jpg"class="tr">
@@ -32,8 +32,13 @@
         </div>
        
    </div>
+   <ul>
+        <li>
+              <strong>{{(property |async)?.orderid}}</strong>
+          </li>
+      </ul>
 <div class="row my-5">
         <div class="offset-md-3 col-md-6 col-xs-12 my-5">
-        <button type="button" class="btn btn-lg btn-block my-5">Download</button>
+        <button type="button" class="btn btn-lg btn-block my-5" (click)="order()">Download</button>
         </div>
 </div>       
