--- a/src/app/admin/adminpending/adminpending.component.html
+++ b/src/app/admin/adminpending/adminpending.component.html
@@ -139,7 +139,7 @@
                         <div class="col-6 float-right mr-auto">
                         <label for="ordersprice">Price</label><p class="float-right">Progress:{{allPercentage | async}}%</p>
                         <ul *ngFor="let propy of (property|async)?.orders; let i = index " #elem [attr.id]="(property|async)?.orderid" class="form-inline mb-2">
-                             <li><input type="file" class="btn btn-default" multiple=true (change)="multipleimageupload(propy,$event,elem.id)" name="propy-{{i}}"></li>
+                             <li><input type="file" class="btn btn-default" multiple=true (change)=" singleimageupload(propy,$event,elem.id)" name="propy-{{i}}"></li>
                             
                         </ul>
                          
@@ -184,7 +184,7 @@
                               <div class="col"  >
                                   <button class="btn btn-primary" type="submit"  (click)="update(elem.id)" >Confirm</button>
                                   <button class="btn btn-danger mx-3" (click)="delete(elem.id)">Delete</button>
-                            </div>
+                                    </div>
                             </div>
                       
                             </form>
